<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gitl" />

    <!-- La propiedad fitstart ajusta al inicio de la imagen,
    lo detecta automáticamente.
     La propiedad fitXY estira la imagen, funciona mejor fitstart-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mani" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="@dimen/ancho"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:alpha="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="@dimen/ancho"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginLeft="@dimen/izquierda"
        app:endIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:alpha="0.8">
        <!-- La propiedad endIconMode marca hace que aparezca el
        icono de mostrar contraseña al final de la misma, un ojo
        con una barra cruzándolo.
         Se puede cambiar dicho icono con un endIconDrawable e
         introduciéndole el icono que se quiera-->

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/hint_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/color_boton"
        android:text="@string/iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="cambiarVentana2"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginTop="32dp"
        android:onClick="regitro"
        android:text="@string/registro"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />



</androidx.constraintlayout.widget.ConstraintLayout>